# clone_control

./: README.md  Zealens.jks  build.bat  local.properties
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/jni/: Android.mk  Application.mk  run.bat
app/src/androidTest/java/com/zealens/face/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/config/: config.cfg
app/src/main/cpp/interface/: I_IPCamera.h  I_TennisBase.h  I_TennisBout.h  I_TennisDrill.h
app/src/main/cpp/ipcamera/: IPCamera.cpp  IPCamera.h  IPCameraJNI.cpp
app/src/main/cpp/ipcamera/include/: NetDEVSDK.h
app/src/main/cpp/tennisbase/: FileGrabber.cpp  FileGrabber.h  FileItem.cpp  FileItem.h  FileTracker.cpp  FileTracker.h
app/src/main/cpp/tennisbout/: TennisBout.cpp  TennisBout.h  TennisBoutJNI.cpp  TennisBoutJNIImpl.cpp  TennisBoutJNIImpl.h  Timer.h
app/src/main/cpp/tennisdrill/: HandleProxy.cpp  HandleProxy.h  TennisDrill.cpp  TennisDrill.h  TennisDrillJNI.cpp  TennisDrillJNIImpl.cpp  TennisDrillJNIImpl.h
app/src/main/cpp/tennisdrill/datas/: HandleDatas.cpp  HandleDatas.h  HandleDatasHand.cpp  HandleDatasHand.h  HandleDatasReturnServe.cpp  HandleDatasReturnServe.h  HandleDatasServe.cpp  HandleDatasServe.h  HandleDatasVolley.cpp  HandleDatasVolley.h
app/src/main/cpp/tennisdrill/stat/: HandleStat.cpp  HandleStat.h  HandleStatHand.cpp  HandleStatHand.h  HandleStatReturnServe.cpp  HandleStatReturnServe.h  HandleStatServe.cpp  HandleStatServe.h  HandleStatVolley.cpp  HandleStatVolley.h
app/src/main/cpp/util/: ALoxHelper.cpp  ALoxHelper.h  ErrorHelper.h  TennisBaseHelper.cpp  TennisBaseHelper.h  TennisBaseJNI.cpp  TennisBaseJNI.h
app/src/main/cpp/util/alox/alib/alib/: debug.cpp
app/src/main/cpp/util/alox/alib/system/: directory.cpp  process.cpp
app/src/main/cpp/util/alox/alox/: lox.cpp  lox.hpp
app/src/main/java/com/zealens/face/: CameraDemo.java  IniFile.java  MainActivity.java
app/src/main/java/com/zealens/face/core/internal/: BoutCallback.java  DrillCallback.java  IPCamera.java  TennisBase.java  TennisBout.java  TennisBoutPresenter.java  TennisDrill.java
app/src/main/java/com/zealens/face/domain/: DomainConst.java
app/src/main/res/layout/: activity_main.xml  ipcamera_demo.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/zealens/face/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
